Implement upload file attachment for direct and group messages
