# server/src/routes/messageRoute.js
@@ -3,12 +3,27 @@ import {
   checkFriendship,
   checkGroupMemberShip,
 } from "../middlewares/friendMiddleware.js";
+import { uploadChatAttachmentSingle } from "../middlewares/chatUploadMiddleware.js";
 import {
   sendDirectMessage,
   sendGroupMessage,
+  downloadMessageAttachment,
 } from "../controllers/messageController.js";
 
 export const messageRoute = express.Router();
 
-messageRoute.post("/direct", checkFriendship, sendDirectMessage);
-messageRoute.post("/group", checkGroupMemberShip, sendGroupMessage);
+messageRoute.get("/download/:messageId", downloadMessageAttachment);
+
+messageRoute.post(
+  "/direct",
+  uploadChatAttachmentSingle,
+  checkFriendship,
+  sendDirectMessage,
+);
+
+messageRoute.post(
+  "/group",
+  uploadChatAttachmentSingle,
+  checkGroupMemberShip,
+  sendGroupMessage,
+);
